Video-seek-with-negative-playback was flaky. https://bugs.webkit.org/show_bug.cgi?id=126379

Patch by Piotr Grad <p.grad@samsung.com> on 2014-01-02
Reviewed by Eric Carlson.

No new tests. Covered by existing tests.

m_player->setRate() should be called before updating m_playbackRate, because potentiallyPlaying() depends
on endedPlayback(), which checks m_playbackRate.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::setPlaybackRate):

Canonical link: https://commits.webkit.org/144306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161231 268f45cc-cd09-0410-ab3c-d52691b4dbfc